# Ambrosia

./: .gitignore  .gitmodules  Ambrosia.nectar.txt  Ambrosia.pro  Ambrosia.sln  CMakeLists.txt  Cleanup.txt  Codestyle.txt  Environment detection.txt  Ideas.txt  Planned unit tests.txt  index.html  params.json
Ambrosia/: Ambrosia.nectar.txt  Ambrosia.pro  Ambrosia.vcxproj  commandline.c++  commandline.h++  global.h++  help_and_version_output.c++  help_and_version_output.h++  main.c++  output.c++  output.h++
Ambrosia/Include/: begin.h  builder.h  commandline.h  end_state.h  global.h  help_and_version_output.h  output.h  program_options.h  reader.h  state.h  target_verifier.h
Ambrosia/Source/: begin.cpp  builder.cpp  commandline.cpp  end_state.cpp  help_and_version_output.cpp  main.cpp  output.cpp  reader.cpp  state.cpp  target_verifier.cpp
Application/: Application.nectar.txt  Application.pro
Application/Include/: Begin.h  End.h  Global.h  Output.h  begin.h  builder.h  end_state.h  global.h  help_and_version_output.h  output.h  reader.h
Application/Source/: Begin.cpp  End.cpp  Main.cpp  begin.cpp  builder.cpp  end_state.cpp  help_and_version_output.cpp  main.cpp  output.cpp  reader.cpp
libAmbrosia/: algorithm.c++  configuration.c++  debug.c++  enum_maps.c++  enums.c++  file_cache.c++  lexer.c++  libAmbrosia.nectar.txt  libAmbrosia.pro  libAmbrosia.vcxproj  nectar.c++  parser.c++  utility.c++
libAmbrosia/Ambrosia/: algorithm.h++  atom.h++  build_element.h++  configuration.h++  debug.h++  dependency_paths.h++  enum_maps.h++  enums.h++  file.h++  file_cache.h++  global.h++  lexer.h++  nectar.h++  parser.h++  platform.h++  program_options.h++  typedefs.h++  utility.h++
libAmbrosia/Ambrosia/Error/: command_error.h++  commandline_error.h++  error.h++  internal_error.h++  (+4 more)
libAmbrosia/Error/: command_error.c++  commandline_error.c++  error.c++  internal_error.c++  nectar_error.c++  soft_error.c++  syntax_error.c++
libAmbrosia/Platform/: common.c++  unix.c++  windows.c++
libAmbrosia/Source/: algorithm.cpp  compile_generator.cpp  configuration.cpp  debug.cpp  dependency.cpp  enum_maps.cpp  file_cache.cpp  generator.cpp  generator_maps.cpp  lexer.cpp  link_generator.cpp  nectar.cpp  nectar_loader.cpp  node.cpp  parser.cpp  project.cpp  status.cpp  target.cpp
test/: CMakeLists.txt
(+124 files in other folders)
